utils/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND_NOT
    CASE
    DEFAULT
    DOUBLE_QUOTES
    MAKE
    NEWLINE
    NIL
    SINGLE_QUOTES
    SWITCH

Grammar

Rule 0     S' -> start
Rule 1     start -> pkg_stmt top_lvl_stmt_list
Rule 2     pkg_stmt -> PACKAGE IDENTIFIER
Rule 3     top_lvl_stmt_list -> top_lvl_stmt
Rule 4     top_lvl_stmt_list -> top_lvl_stmt top_lvl_stmt_list
Rule 5     top_lvl_stmt -> imp_stmt
Rule 6     top_lvl_stmt -> struct_decl
Rule 7     top_lvl_stmt -> var_decl
Rule 8     top_lvl_stmt -> func_decl
Rule 9     top_lvl_stmt -> method_decl
Rule 10    imp_list -> STRING_LIT imp_list
Rule 11    imp_list -> STRING_LIT
Rule 12    imp_stmt -> IMPORT STRING_LIT
Rule 13    imp_stmt -> IMPORT LROUND imp_list RROUND
Rule 14    arr_type -> LSQUARE INT_LIT RSQUARE arr_type
Rule 15    arr_type -> LSQUARE INT_LIT RSQUARE DATA_TYPE
Rule 16    slc_type -> LSQUARE RSQUARE slc_type
Rule 17    slc_type -> LSQUARE RSQUARE DATA_TYPE
Rule 18    ptr_type -> STAR ptr_type
Rule 19    ptr_type -> STAR DATA_TYPE
Rule 20    type -> DATA_TYPE
Rule 21    type -> arr_type
Rule 22    type -> slc_type
Rule 23    type -> ptr_type
Rule 24    var_decl -> VAR IDENTIFIER type
Rule 25    var_decl -> VAR IDENTIFIER type EQ expression
Rule 26    var_decl -> VAR IDENTIFIER ASSIGN expression
Rule 27    var_decl -> CONST IDENTIFIER type EQ expression
Rule 28    var_decl -> CONST IDENTIFIER ASSIGN expression
Rule 29    struct_decl -> TYPE IDENTIFIER STRUCT LCURLY var_decl_list RCURLY
Rule 30    var_decl_list -> IDENTIFIER type var_decl_list
Rule 31    var_decl_list -> IDENTIFIER type
Rule 32    block -> LCURLY stmt_list RCURLY
Rule 33    stmt_list -> stmt stmt_list
Rule 34    stmt_list -> stmt
Rule 35    stmt -> var_decl
Rule 36    stmt -> return_stmt
Rule 37    stmt -> block
Rule 38    stmt -> selection_stmt
Rule 39    stmt -> iteration_stmt
Rule 40    stmt -> jump_stmt
Rule 41    stmt -> label_stmt
Rule 42    stmt -> expression_stmt
Rule 43    stmt -> expression
Rule 44    return_stmt -> RETURN argument_expression_list
Rule 45    expression_stmt -> SEMICOLON
Rule 46    expression_stmt -> expression SEMICOLON
Rule 47    selection_stmt -> IF expression block
Rule 48    selection_stmt -> IF expression block ELSE block
Rule 49    selection_stmt -> IF expression block ELSE selection_stmt
Rule 50    iteration_stmt -> FOR block
Rule 51    iteration_stmt -> FOR expression block
Rule 52    iteration_stmt -> FOR expression_stmt expression_stmt expression block
Rule 53    jump_stmt -> CONTINUE
Rule 54    jump_stmt -> BREAK
Rule 55    jump_stmt -> GOTO IDENTIFIER
Rule 56    label_stmt -> IDENTIFIER COLON stmt
Rule 57    func_decl -> FUNC IDENTIFIER signature block
Rule 58    func_decl -> FUNC IDENTIFIER signature
Rule 59    signature -> params result
Rule 60    signature -> params
Rule 61    params -> LROUND param_list RROUND
Rule 62    params -> LROUND RROUND
Rule 63    param_list -> type
Rule 64    param_list -> identifier_list type
Rule 65    param_list -> param_list COMMA identifier_list type
Rule 66    identifier_list -> IDENTIFIER
Rule 67    identifier_list -> identifier_list COMMA IDENTIFIER
Rule 68    result -> type
Rule 69    method_decl -> FUNC LROUND IDENTIFIER type RROUND IDENTIFIER signature
Rule 70    method_decl -> FUNC LROUND IDENTIFIER type RROUND IDENTIFIER signature block
Rule 71    primary_expression -> IDENTIFIER
Rule 72    primary_expression -> lit_operand
Rule 73    primary_expression -> LROUND expression RROUND
Rule 74    postfix_expression -> primary_expression
Rule 75    postfix_expression -> postfix_expression LSQUARE expression RSQUARE
Rule 76    postfix_expression -> postfix_expression LROUND RROUND
Rule 77    postfix_expression -> postfix_expression LROUND argument_expression_list RROUND
Rule 78    postfix_expression -> postfix_expression DOT IDENTIFIER
Rule 79    postfix_expression -> postfix_expression DOT IDENTIFIER LROUND RROUND
Rule 80    postfix_expression -> postfix_expression DOT IDENTIFIER LROUND argument_expression_list RROUND
Rule 81    postfix_expression -> postfix_expression PLUS_PLUS
Rule 82    postfix_expression -> postfix_expression MINUS_MINUS
Rule 83    argument_expression_list -> assignment_expression
Rule 84    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 85    unary_expression -> postfix_expression
Rule 86    unary_expression -> PLUS_PLUS postfix_expression
Rule 87    unary_expression -> MINUS_MINUS postfix_expression
Rule 88    unary_expression -> unary_operator postfix_expression
Rule 89    unary_operator -> AMP
Rule 90    unary_operator -> STAR
Rule 91    unary_operator -> PLUS
Rule 92    unary_operator -> MINUS
Rule 93    unary_operator -> NOT
Rule 94    multiplicative_expression -> unary_expression
Rule 95    multiplicative_expression -> multiplicative_expression STAR unary_expression
Rule 96    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 97    multiplicative_expression -> multiplicative_expression MODULO unary_expression
Rule 98    additive_expression -> multiplicative_expression
Rule 99    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 100   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 101   shift_expression -> additive_expression
Rule 102   shift_expression -> shift_expression LSHIFT additive_expression
Rule 103   shift_expression -> shift_expression RSHIFT additive_expression
Rule 104   relational_expression -> shift_expression
Rule 105   relational_expression -> relational_expression LT shift_expression
Rule 106   relational_expression -> relational_expression GT shift_expression
Rule 107   relational_expression -> relational_expression LT_EQ shift_expression
Rule 108   relational_expression -> relational_expression GT_EQ shift_expression
Rule 109   equality_expression -> relational_expression
Rule 110   equality_expression -> equality_expression EQ_EQ relational_expression
Rule 111   equality_expression -> equality_expression NOT_EQ relational_expression
Rule 112   and_expression -> equality_expression
Rule 113   and_expression -> and_expression AMP equality_expression
Rule 114   exclusive_or_expression -> and_expression
Rule 115   exclusive_or_expression -> exclusive_or_expression CARET and_expression
Rule 116   inclusive_or_expression -> exclusive_or_expression
Rule 117   inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 118   logical_and_expression -> inclusive_or_expression
Rule 119   logical_and_expression -> logical_and_expression AMP_AMP inclusive_or_expression
Rule 120   logical_or_expression -> logical_and_expression
Rule 121   logical_or_expression -> logical_or_expression OR_OR logical_and_expression
Rule 122   assignment_expression -> logical_or_expression
Rule 123   assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 124   assignment_operator -> PLUS_EQ
Rule 125   assignment_operator -> MINUS_EQ
Rule 126   assignment_operator -> STAR_EQ
Rule 127   assignment_operator -> DIVIDE_EQ
Rule 128   assignment_operator -> MODULO_EQ
Rule 129   assignment_operator -> AMP_EQ
Rule 130   assignment_operator -> OR_EQ
Rule 131   assignment_operator -> CARET_EQ
Rule 132   assignment_operator -> EQ
Rule 133   assignment_operator -> ASSIGN
Rule 134   expression -> assignment_expression
Rule 135   lit_operand -> INT_LIT
Rule 136   lit_operand -> FLOAT_LIT
Rule 137   lit_operand -> STRING_LIT
Rule 138   lit_operand -> BOOL_LIT

Terminals, with rules where they appear

AMP                  : 89 113
AMP_AMP              : 119
AMP_EQ               : 129
AND_NOT              : 
ASSIGN               : 26 28 133
BOOL_LIT             : 138
BREAK                : 54
CARET                : 115
CARET_EQ             : 131
CASE                 : 
COLON                : 56
COMMA                : 65 67 84
CONST                : 27 28
CONTINUE             : 53
DATA_TYPE            : 15 17 19 20
DEFAULT              : 
DIVIDE               : 96
DIVIDE_EQ            : 127
DOT                  : 78 79 80
DOUBLE_QUOTES        : 
ELSE                 : 48 49
EQ                   : 25 27 132
EQ_EQ                : 110
FLOAT_LIT            : 136
FOR                  : 50 51 52
FUNC                 : 57 58 69 70
GOTO                 : 55
GT                   : 106
GT_EQ                : 108
IDENTIFIER           : 2 24 25 26 27 28 29 30 31 55 56 57 58 66 67 69 69 70 70 71 78 79 80
IF                   : 47 48 49
IMPORT               : 12 13
INT_LIT              : 14 15 135
LCURLY               : 29 32
LROUND               : 13 61 62 69 70 73 76 77 79 80
LSHIFT               : 102
LSQUARE              : 14 15 16 17 75
LT                   : 105
LT_EQ                : 107
MAKE                 : 
MINUS                : 92 100
MINUS_EQ             : 125
MINUS_MINUS          : 82 87
MODULO               : 97
MODULO_EQ            : 128
NEWLINE              : 
NIL                  : 
NOT                  : 93
NOT_EQ               : 111
OR                   : 117
OR_EQ                : 130
OR_OR                : 121
PACKAGE              : 2
PLUS                 : 91 99
PLUS_EQ              : 124
PLUS_PLUS            : 81 86
RCURLY               : 29 32
RETURN               : 44
RROUND               : 13 61 62 69 70 73 76 77 79 80
RSHIFT               : 103
RSQUARE              : 14 15 16 17 75
SEMICOLON            : 45 46
SINGLE_QUOTES        : 
STAR                 : 18 19 90 95
STAR_EQ              : 126
STRING_LIT           : 10 11 12 137
STRUCT               : 29
SWITCH               : 
TYPE                 : 29
VAR                  : 24 25 26
error                : 

Nonterminals, with rules where they appear

additive_expression  : 99 100 101 102 103
and_expression       : 113 114 115
argument_expression_list : 44 77 80 84
arr_type             : 14 21
assignment_expression : 83 84 123 134
assignment_operator  : 123
block                : 37 47 48 48 49 50 51 52 57 70
equality_expression  : 110 111 112 113
exclusive_or_expression : 115 116 117
expression           : 25 26 27 28 43 46 47 48 49 51 52 73 75
expression_stmt      : 42 52 52
func_decl            : 8
identifier_list      : 64 65 67
imp_list             : 10 13
imp_stmt             : 5
inclusive_or_expression : 117 118 119
iteration_stmt       : 39
jump_stmt            : 40
label_stmt           : 41
lit_operand          : 72
logical_and_expression : 119 120 121
logical_or_expression : 121 122
method_decl          : 9
multiplicative_expression : 95 96 97 98 99 100
param_list           : 61 65
params               : 59 60
pkg_stmt             : 1
postfix_expression   : 75 76 77 78 79 80 81 82 85 86 87 88
primary_expression   : 74
ptr_type             : 18 23
relational_expression : 105 106 107 108 109 110 111
result               : 59
return_stmt          : 36
selection_stmt       : 38 49
shift_expression     : 102 103 104 105 106 107 108
signature            : 57 58 69 70
slc_type             : 16 22
start                : 0
stmt                 : 33 34 56
stmt_list            : 32 33
struct_decl          : 6
top_lvl_stmt         : 3 4
top_lvl_stmt_list    : 1 4
type                 : 24 25 27 30 31 63 64 65 68 69 70
unary_expression     : 94 95 96 97 123
unary_operator       : 88
var_decl             : 7 35
var_decl_list        : 29 30

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . pkg_stmt top_lvl_stmt_list
    (2) pkg_stmt -> . PACKAGE IDENTIFIER

    PACKAGE         shift and go to state 3

    start                          shift and go to state 1
    pkg_stmt                       shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> pkg_stmt . top_lvl_stmt_list
    (3) top_lvl_stmt_list -> . top_lvl_stmt
    (4) top_lvl_stmt_list -> . top_lvl_stmt top_lvl_stmt_list
    (5) top_lvl_stmt -> . imp_stmt
    (6) top_lvl_stmt -> . struct_decl
    (7) top_lvl_stmt -> . var_decl
    (8) top_lvl_stmt -> . func_decl
    (9) top_lvl_stmt -> . method_decl
    (12) imp_stmt -> . IMPORT STRING_LIT
    (13) imp_stmt -> . IMPORT LROUND imp_list RROUND
    (29) struct_decl -> . TYPE IDENTIFIER STRUCT LCURLY var_decl_list RCURLY
    (24) var_decl -> . VAR IDENTIFIER type
    (25) var_decl -> . VAR IDENTIFIER type EQ expression
    (26) var_decl -> . VAR IDENTIFIER ASSIGN expression
    (27) var_decl -> . CONST IDENTIFIER type EQ expression
    (28) var_decl -> . CONST IDENTIFIER ASSIGN expression
    (57) func_decl -> . FUNC IDENTIFIER signature block
    (58) func_decl -> . FUNC IDENTIFIER signature
    (69) method_decl -> . FUNC LROUND IDENTIFIER type RROUND IDENTIFIER signature
    (70) method_decl -> . FUNC LROUND IDENTIFIER type RROUND IDENTIFIER signature block

    IMPORT          shift and go to state 11
    TYPE            shift and go to state 12
    VAR             shift and go to state 13
    CONST           shift and go to state 14
    FUNC            shift and go to state 15

    top_lvl_stmt_list              shift and go to state 4
    top_lvl_stmt                   shift and go to state 5
    imp_stmt                       shift and go to state 6
    struct_decl                    shift and go to state 7
    var_decl                       shift and go to state 8
    func_decl                      shift and go to state 9
    method_decl                    shift and go to state 10

state 3

    (2) pkg_stmt -> PACKAGE . IDENTIFIER

    IDENTIFIER      shift and go to state 16


state 4

    (1) start -> pkg_stmt top_lvl_stmt_list .

    $end            reduce using rule 1 (start -> pkg_stmt top_lvl_stmt_list .)


state 5

    (3) top_lvl_stmt_list -> top_lvl_stmt .
    (4) top_lvl_stmt_list -> top_lvl_stmt . top_lvl_stmt_list
    (3) top_lvl_stmt_list -> . top_lvl_stmt
    (4) top_lvl_stmt_list -> . top_lvl_stmt top_lvl_stmt_list
    (5) top_lvl_stmt -> . imp_stmt
    (6) top_lvl_stmt -> . struct_decl
    (7) top_lvl_stmt -> . var_decl
    (8) top_lvl_stmt -> . func_decl
    (9) top_lvl_stmt -> . method_decl
    (12) imp_stmt -> . IMPORT STRING_LIT
    (13) imp_stmt -> . IMPORT LROUND imp_list RROUND
    (29) struct_decl -> . TYPE IDENTIFIER STRUCT LCURLY var_decl_list RCURLY
    (24) var_decl -> . VAR IDENTIFIER type
    (25) var_decl -> . VAR IDENTIFIER type EQ expression
    (26) var_decl -> . VAR IDENTIFIER ASSIGN expression
    (27) var_decl -> . CONST IDENTIFIER type EQ expression
    (28) var_decl -> . CONST IDENTIFIER ASSIGN expression
    (57) func_decl -> . FUNC IDENTIFIER signature block
    (58) func_decl -> . FUNC IDENTIFIER signature
    (69) method_decl -> . FUNC LROUND IDENTIFIER type RROUND IDENTIFIER signature
    (70) method_decl -> . FUNC LROUND IDENTIFIER type RROUND IDENTIFIER signature block

    $end            reduce using rule 3 (top_lvl_stmt_list -> top_lvl_stmt .)
    IMPORT          shift and go to state 11
    TYPE            shift and go to state 12
    VAR             shift and go to state 13
    CONST           shift and go to state 14
    FUNC            shift and go to state 15

    top_lvl_stmt                   shift and go to state 5
    top_lvl_stmt_list              shift and go to state 17
    imp_stmt                       shift and go to state 6
    struct_decl                    shift and go to state 7
    var_decl                       shift and go to state 8
    func_decl                      shift and go to state 9
    method_decl                    shift and go to state 10

state 6

    (5) top_lvl_stmt -> imp_stmt .

    IMPORT          reduce using rule 5 (top_lvl_stmt -> imp_stmt .)
    TYPE            reduce using rule 5 (top_lvl_stmt -> imp_stmt .)
    VAR             reduce using rule 5 (top_lvl_stmt -> imp_stmt .)
    CONST           reduce using rule 5 (top_lvl_stmt -> imp_stmt .)
    FUNC            reduce using rule 5 (top_lvl_stmt -> imp_stmt .)
    $end            reduce using rule 5 (top_lvl_stmt -> imp_stmt .)


state 7

    (6) top_lvl_stmt -> struct_decl .

    IMPORT          reduce using rule 6 (top_lvl_stmt -> struct_decl .)
    TYPE            reduce using rule 6 (top_lvl_stmt -> struct_decl .)
    VAR             reduce using rule 6 (top_lvl_stmt -> struct_decl .)
    CONST           reduce using rule 6 (top_lvl_stmt -> struct_decl .)
    FUNC            reduce using rule 6 (top_lvl_stmt -> struct_decl .)
    $end            reduce using rule 6 (top_lvl_stmt -> struct_decl .)


state 8

    (7) top_lvl_stmt -> var_decl .

    IMPORT          reduce using rule 7 (top_lvl_stmt -> var_decl .)
    TYPE            reduce using rule 7 (top_lvl_stmt -> var_decl .)
    VAR             reduce using rule 7 (top_lvl_stmt -> var_decl .)
    CONST           reduce using rule 7 (top_lvl_stmt -> var_decl .)
    FUNC            reduce using rule 7 (top_lvl_stmt -> var_decl .)
    $end            reduce using rule 7 (top_lvl_stmt -> var_decl .)


state 9

    (8) top_lvl_stmt -> func_decl .

    IMPORT          reduce using rule 8 (top_lvl_stmt -> func_decl .)
    TYPE            reduce using rule 8 (top_lvl_stmt -> func_decl .)
    VAR             reduce using rule 8 (top_lvl_stmt -> func_decl .)
    CONST           reduce using rule 8 (top_lvl_stmt -> func_decl .)
    FUNC            reduce using rule 8 (top_lvl_stmt -> func_decl .)
    $end            reduce using rule 8 (top_lvl_stmt -> func_decl .)


state 10

    (9) top_lvl_stmt -> method_decl .

    IMPORT          reduce using rule 9 (top_lvl_stmt -> method_decl .)
    TYPE            reduce using rule 9 (top_lvl_stmt -> method_decl .)
    VAR             reduce using rule 9 (top_lvl_stmt -> method_decl .)
    CONST           reduce using rule 9 (top_lvl_stmt -> method_decl .)
    FUNC            reduce using rule 9 (top_lvl_stmt -> method_decl .)
    $end            reduce using rule 9 (top_lvl_stmt -> method_decl .)


state 11

    (12) imp_stmt -> IMPORT . STRING_LIT
    (13) imp_stmt -> IMPORT . LROUND imp_list RROUND

    STRING_LIT      shift and go to state 18
    LROUND          shift and go to state 19


state 12

    (29) struct_decl -> TYPE . IDENTIFIER STRUCT LCURLY var_decl_list RCURLY

    IDENTIFIER      shift and go to state 20


state 13

    (24) var_decl -> VAR . IDENTIFIER type
    (25) var_decl -> VAR . IDENTIFIER type EQ expression
    (26) var_decl -> VAR . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 21


state 14

    (27) var_decl -> CONST . IDENTIFIER type EQ expression
    (28) var_decl -> CONST . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 22


state 15

    (57) func_decl -> FUNC . IDENTIFIER signature block
    (58) func_decl -> FUNC . IDENTIFIER signature
    (69) method_decl -> FUNC . LROUND IDENTIFIER type RROUND IDENTIFIER signature
    (70) method_decl -> FUNC . LROUND IDENTIFIER type RROUND IDENTIFIER signature block

    IDENTIFIER      shift and go to state 23
    LROUND          shift and go to state 24


state 16

    (2) pkg_stmt -> PACKAGE IDENTIFIER .

    IMPORT          reduce using rule 2 (pkg_stmt -> PACKAGE IDENTIFIER .)
    TYPE            reduce using rule 2 (pkg_stmt -> PACKAGE IDENTIFIER .)
    VAR             reduce using rule 2 (pkg_stmt -> PACKAGE IDENTIFIER .)
    CONST           reduce using rule 2 (pkg_stmt -> PACKAGE IDENTIFIER .)
    FUNC            reduce using rule 2 (pkg_stmt -> PACKAGE IDENTIFIER .)


state 17

    (4) top_lvl_stmt_list -> top_lvl_stmt top_lvl_stmt_list .

    $end            reduce using rule 4 (top_lvl_stmt_list -> top_lvl_stmt top_lvl_stmt_list .)


state 18

    (12) imp_stmt -> IMPORT STRING_LIT .

    IMPORT          reduce using rule 12 (imp_stmt -> IMPORT STRING_LIT .)
    TYPE            reduce using rule 12 (imp_stmt -> IMPORT STRING_LIT .)
    VAR             reduce using rule 12 (imp_stmt -> IMPORT STRING_LIT .)
    CONST           reduce using rule 12 (imp_stmt -> IMPORT STRING_LIT .)
    FUNC            reduce using rule 12 (imp_stmt -> IMPORT STRING_LIT .)
    $end            reduce using rule 12 (imp_stmt -> IMPORT STRING_LIT .)


state 19

    (13) imp_stmt -> IMPORT LROUND . imp_list RROUND
    (10) imp_list -> . STRING_LIT imp_list
    (11) imp_list -> . STRING_LIT

    STRING_LIT      shift and go to state 26

    imp_list                       shift and go to state 25

state 20

    (29) struct_decl -> TYPE IDENTIFIER . STRUCT LCURLY var_decl_list RCURLY

    STRUCT          shift and go to state 27


state 21

    (24) var_decl -> VAR IDENTIFIER . type
    (25) var_decl -> VAR IDENTIFIER . type EQ expression
    (26) var_decl -> VAR IDENTIFIER . ASSIGN expression
    (20) type -> . DATA_TYPE
    (21) type -> . arr_type
    (22) type -> . slc_type
    (23) type -> . ptr_type
    (14) arr_type -> . LSQUARE INT_LIT RSQUARE arr_type
    (15) arr_type -> . LSQUARE INT_LIT RSQUARE DATA_TYPE
    (16) slc_type -> . LSQUARE RSQUARE slc_type
    (17) slc_type -> . LSQUARE RSQUARE DATA_TYPE
    (18) ptr_type -> . STAR ptr_type
    (19) ptr_type -> . STAR DATA_TYPE

    ASSIGN          shift and go to state 29
    DATA_TYPE       shift and go to state 30
    LSQUARE         shift and go to state 34
    STAR            shift and go to state 35

    type                           shift and go to state 28
    arr_type                       shift and go to state 31
    slc_type                       shift and go to state 32
    ptr_type                       shift and go to state 33

state 22

    (27) var_decl -> CONST IDENTIFIER . type EQ expression
    (28) var_decl -> CONST IDENTIFIER . ASSIGN expression
    (20) type -> . DATA_TYPE
    (21) type -> . arr_type
    (22) type -> . slc_type
    (23) type -> . ptr_type
    (14) arr_type -> . LSQUARE INT_LIT RSQUARE arr_type
    (15) arr_type -> . LSQUARE INT_LIT RSQUARE DATA_TYPE
    (16) slc_type -> . LSQUARE RSQUARE slc_type
    (17) slc_type -> . LSQUARE RSQUARE DATA_TYPE
    (18) ptr_type -> . STAR ptr_type
    (19) ptr_type -> . STAR DATA_TYPE

    ASSIGN          shift and go to state 37
    DATA_TYPE       shift and go to state 30
    LSQUARE         shift and go to state 34
    STAR            shift and go to state 35

    type                           shift and go to state 36
    arr_type                       shift and go to state 31
    slc_type                       shift and go to state 32
    ptr_type                       shift and go to state 33

state 23

    (57) func_decl -> FUNC IDENTIFIER . signature block
    (58) func_decl -> FUNC IDENTIFIER . signature
    (59) signature -> . params result
    (60) signature -> . params
    (61) params -> . LROUND param_list RROUND
    (62) params -> . LROUND RROUND

    LROUND          shift and go to state 40

    signature                      shift and go to state 38
    params                         shift and go to state 39

state 24

    (69) method_decl -> FUNC LROUND . IDENTIFIER type RROUND IDENTIFIER signature
    (70) method_decl -> FUNC LROUND . IDENTIFIER type RROUND IDENTIFIER signature block

    IDENTIFIER      shift and go to state 41


state 25

    (13) imp_stmt -> IMPORT LROUND imp_list . RROUND

    RROUND          shift and go to state 42


state 26

    (10) imp_list -> STRING_LIT . imp_list
    (11) imp_list -> STRING_LIT .
    (10) imp_list -> . STRING_LIT imp_list
    (11) imp_list -> . STRING_LIT

    RROUND          reduce using rule 11 (imp_list -> STRING_LIT .)
    STRING_LIT      shift and go to state 26

    imp_list                       shift and go to state 43

state 27

    (29) struct_decl -> TYPE IDENTIFIER STRUCT . LCURLY var_decl_list RCURLY

    LCURLY          shift and go to state 44


state 28

    (24) var_decl -> VAR IDENTIFIER type .
    (25) var_decl -> VAR IDENTIFIER type . EQ expression

    IMPORT          reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    TYPE            reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    VAR             reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    CONST           reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    FUNC            reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    $end            reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    RETURN          reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    LCURLY          reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    IF              reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    FOR             reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    CONTINUE        reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    BREAK           reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    GOTO            reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    IDENTIFIER      reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    SEMICOLON       reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    PLUS_PLUS       reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    MINUS_MINUS     reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    AMP             reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    STAR            reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    PLUS            reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    MINUS           reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    NOT             reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    LROUND          reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    INT_LIT         reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    FLOAT_LIT       reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    STRING_LIT      reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    BOOL_LIT        reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    RCURLY          reduce using rule 24 (var_decl -> VAR IDENTIFIER type .)
    EQ              shift and go to state 45


state 29

    (26) var_decl -> VAR IDENTIFIER ASSIGN . expression
    (134) expression -> . assignment_expression
    (122) assignment_expression -> . logical_or_expression
    (123) assignment_expression -> . unary_expression assignment_operator assignment_expression
    (120) logical_or_expression -> . logical_and_expression
    (121) logical_or_expression -> . logical_or_expression OR_OR logical_and_expression
    (85) unary_expression -> . postfix_expression
    (86) unary_expression -> . PLUS_PLUS postfix_expression
    (87) unary_expression -> . MINUS_MINUS postfix_expression
    (88) unary_expression -> . unary_operator postfix_expression
    (118) logical_and_expression -> . inclusive_or_expression
    (119) logical_and_expression -> . logical_and_expression AMP_AMP inclusive_or_expression
    (74) postfix_expression -> . primary_expression
    (75) postfix_expression -> . postfix_expression LSQUARE expression RSQUARE
    (76) postfix_expression -> . postfix_expression LROUND RROUND
    (77) postfix_expression -> . postfix_expression LROUND argument_expression_list RROUND
    (78) postfix_expression -> . postfix_expression DOT IDENTIFIER
    (79) postfix_expression -> . postfix_expression DOT IDENTIFIER LROUND RROUND
    (80) postfix_expression -> . postfix_expression DOT IDENTIFIER LROUND argument_expression_list RROUND
    (81) postfix_expression -> . postfix_expression PLUS_PLUS
    (82) postfix_expression -> . postfix_expression MINUS_MINUS
    (89) unary_operator -> . AMP
    (90) unary_operator -> . STAR
    (91) unary_operator -> . PLUS
    (92) unary_operator -> . MINUS
    (93) unary_operator -> . NOT
    (116) inclusive_or_expression -> . exclusive_or_expression
    (117) inclusive_or_expression -> . inclusive_or_expression OR exclusive_or_expression
    (71) primary_expression -> . IDENTIFIER
    (72) primary_expression -> . lit_operand
    (73) primary_expression -> . LROUND expression RROUND
    (114) exclusive_or_expression -> . and_expression
    (115) exclusive_or_expression -> . exclusive_or_expression CARET and_expression
    (135) lit_operand -> . INT_LIT
    (136) lit_operand -> . FLOAT_LIT
    (137) lit_operand -> . STRING_LIT
    (138) lit_operand -> . BOOL_LIT
    (112) and_expression -> . equality_expression
    (113) and_expression -> . and_expression AMP equality_expression
    (109) equality_expression -> . relational_expression
    (110) equality_expression -> . equality_expression EQ_EQ relational_expression
    (111) equality_expression -> . equality_expression NOT_EQ relational_expression
    (104) relational_expression -> . shift_expression
    (105) relational_expression -> . relational_expression LT shift_expression
    (106) relational_expression -> . relational_expression GT shift_expression
    (107) relational_expression -> . relational_expression LT_EQ shift_expression
    (108) relational_expression -> . relational_expression GT_EQ shift_expression
    (101) shift_expression -> . additive_expression
    (102) shift_expression -> . shift_expression LSHIFT additive_expression
    (103) shift_expression -> . shift_expression RSHIFT additive_expression
    (98) additive_expression -> . multiplicative_expression
    (99) additive_expression -> . additive_expression PLUS multiplicative_expression
    (100) additive_expression -> . additive_expression MINUS multiplicative_expression
    (94) multiplicative_expression -> . unary_expression
    (95) multiplicative_expression -> . multiplicative_expression STAR unary_expression
    (96) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (97) multiplicative_expression -> . multiplicative_expression MODULO unary_expression

    PLUS_PLUS       shift and go to state 53
    MINUS_MINUS     shift and go to state 54
    AMP             shift and go to state 59
    STAR            shift and go to state 60
    PLUS            shift and go to state 61
    MINUS           shift and go to state 62
    NOT             shift and go to state 63
    IDENTIFIER      shift and go to state 46
    LROUND          shift and go to state 58
    INT_LIT         shift and go to state 67
    FLOAT_LIT       shift and go to state 68
    STRING_LIT      shift and go to state 69
    BOOL_LIT        shift and go to state 70

    expression                     shift and go to state 47
    assignment_expression          shift and go to state 48
    logical_or_expression          shift and go to state 49
    unary_expression               shift and go to state 50
    logical_and_expression         shift and go to state 51
    postfix_expression             shift and go to state 52
    unary_operator                 shift and go to state 55
    inclusive_or_expression        shift and go to state 56
    primary_expression             shift and go to state 57
    exclusive_or_expression        shift and go to state 64
    lit_operand                    shift and go to state 65
    and_expression                 shift and go to state 66
    equality_expression            shift and go to state 71
    relational_expression          shift and go to state 72
    shift_expression               shift and go to state 73
    additive_expression            shift and go to state 74
    multiplicative_expression      shift and go to state 75

state 30

    (20) type -> DATA_TYPE .
